Index path fixed

--- a/angular-todomvc/index.html
+++ b/angular-todomvc/index.html
@@ -12,6 +12,6 @@
 
 <body>
   <todo-app></todo-app>
-<script type="text/javascript" src="./inline.70dcf499832778df6e48.bundle.js"></script><script type="text/javascript" src="./polyfills.87365c933937cb2f588a.bundle.js"></script><script type="text/javascript" src="./vendor.712c46c653dc3755976d.bundle.js"></script><script type="text/javascript" src="./main.560f88bfc1e2031bb74a.bundle.js"></script></body>
+<script type="text/javascript" src="angular-todomvc/inline.70dcf499832778df6e48.bundle.js"></script><script type="text/javascript" src="angular-todomvc/polyfills.87365c933937cb2f588a.bundle.js"></script><script type="text/javascript" src="angular-todomvc/vendor.712c46c653dc3755976d.bundle.js"></script><script type="text/javascript" src="angular-todomvc/main.560f88bfc1e2031bb74a.bundle.js"></script></body>
 
 </html>
