--- a/angular-todomvc/index.html
+++ b/angular-todomvc/index.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.54b63b12c09af0f3063f.bundle.css" rel="stylesheet"/></head>
+<link href="angular-todomvc/styles.54b63b12c09af0f3063f.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <todo-app></todo-app>
