--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<html>
+    <head>
+
+    </head>
+    <body>
+        <ul>
+            <li>
+                <a href="./angular-todomvc">angular-todomvc</a>
+            </li>
+        </ul>
+    </body>
+</html>
