Revert "angular-todomvc added to index.html"
This reverts commit 3cd931b8988c3b232b277eb9cf34cfb5940633e3.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html>
-    <head>
-
-    </head>
-    <body>
-        <ul>
-            <li>
-                <a href="./angular-todomvc">angular-todomvc</a>
-            </li>
-        </ul>
-    </body>
-</html>
+"Hello World" 
